--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,14 +1,15 @@
+html, body, .container-fluid {
+    height: 100vh;
+}
+
 .header {
     height: 6%;
 }
 
-.table th {
-    border: none;
-}
 
-.top-row {
-    border-bottom: 1px solid #dfdfdf;
-}
+h1 {
+        white-space: nowrap;
+    }
 
 .offcanvas, .order-info, .item-info {
     width: 50%;
@@ -16,6 +17,12 @@
 
 .order-footer {
     height: 6vh;
+}
+
+
+.item-footer {
+    height: 6vh;
+    justify-content: center;
 }
 
 /* Allow table to scroll */
@@ -36,3 +43,51 @@
   border-bottom-width: 0;
 }
 /* -------------------- */
+
+@media screen and (max-width: 767px) {
+    .header {
+        height: 10%;
+    }
+
+    h1 { 
+        font-size: 1.2rem; 
+        white-space: normal;
+    }
+    .offcanvas, .order-info, .item-info {
+        width: 100%;
+        height: 50%;
+    }
+
+.details {
+    display: inline-block;
+}
+
+.table-fixed tbody {
+    height: 20vh;
+}
+
+tr {
+    clear: both;
+}
+
+html, body, .container-fluid {
+    height: 75vh;
+}
+
+.mobile-column {
+    height: 100%;
+}
+
+.mobile-col {
+    width: 20%;
+}
+
+tr> td {
+    width: 20%;
+}
+
+.item-info {
+    justify-content: start;
+}
+
+}
