--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -23,6 +23,10 @@
       integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
       crossorigin="anonymous"
     />
+    <link
+        rel="stylesheet"
+        href="https://cdn.jsdelivr.net/npm/@algolia/autocomplete-theme-classic"
+    />
     <link rel="stylesheet" href="/css/style.css" />
   </head>
   <body>
