--- a/public/css/style.css
+++ b/public/css/style.css
@@ -27,11 +27,11 @@ h1 {
 
 /* Allow table to scroll */
 .table-fixed thead {
-  width: 97%;
+  width: 100%;
 }
 .inputHeader{width:100%}
 .table-fixed tbody {
-  height: 80.3vh;
+    height: 80vh;
   overflow-y: auto;
   width: 100%;
 }
@@ -45,17 +45,55 @@ h1 {
 /* -------------------- */
 
 @media screen and (max-width: 767px) {
+    .voidItem {
+        padding-left: 0;
+        padding-right: 0;
+    }
+
+    .itemButton {
+        width: 60px;
+    }
+
+    #overridePrice {
+        width: 60px;
+    }
+
+    .overrideButton {
+        height: 66px;
+        width: 88px;
+    }
+
+    .completeButton {
+        width: 100%;
+    }
+
+
+    .searchButton {
+        height:58px;
+        width: 59px;
+    }
+
+    #autocomplete {
+        flex-grow: 1;
+    }
+
+
     .header {
         height: 10%;
     }
 
-    h1 { 
+    h1, h2 { 
         font-size: 1.2rem; 
         white-space: normal;
     }
-    .offcanvas, .order-info, .item-info {
+    .order-info, .item-info {
         width: 100%;
         height: 50%;
+    }
+
+    .offcanvas {
+        width: 80%;
+        height: 100%;
     }
 
 .details {
@@ -90,4 +128,73 @@ tr> td {
     justify-content: start;
 }
 
+
+
+}
+
+.hidden {
+    display: none;
+}
+
+.fixedWidth {
+    width: 80px;
+}
+
+.fixedHeight {
+    height: 58px;
+    
+}
+
+.correctBorder {
+    border: 1px solid rgba(0,0,0,.125);
+
+}
+
+.removeBorder {
+    border: 0;
+}
+
+.table-fixed .tablefoot {
+    display: inline-block;
+    border: 0;
+}
+
+.overrideButton {
+    white-space: break-spaces;
+}
+
+.square {
+    border-radius: 0;
+}
+
+.squareRight {
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+}
+
+@media screen and (min-width: 768px) {
+.unpadAll {
+    display:flex;
+    justify-content: end;
+}
+table {
+    height: 90vh;
+}
+}
+
+.unpadSides {
+    padding-left: 0;
+    padding-right: 0;
+}
+
+.unpadAll {
+    padding: 0;
+}
+
+#orderDetails {
+    margin: 0;
+}
+
+.form-select {
+    background-image: none;
 }
