--- a/public/css/signin.css
+++ b/public/css/signin.css
@@ -3,12 +3,12 @@ body {
   height: 100%;
 }
 
-body {
+.signin-container {
   display: flex;
+  height: 75%;
   align-items: center;
   padding-top: 40px;
   padding-bottom: 40px;
-  background-color: #f5f5f5;
 }
 
 .form-signin {
