--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,34 @@
 <%- include('partials/header') -%>
+    <link rel="stylesheet" href="/css/style.css" />
+</head>
+<body>
 
-<main class="container">
-    <div class="row justify-content-around mt-5">
-        <a href="/login" class="col-3 btn btn-primary"> Login</a>
-        <a href="/signup" class="col-3 btn btn-primary"> Signup</a>
-    </div>
-</main>
-    
 
+<div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+
+    <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
+      <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
+        <span class="fs-4">Magical Merchant</span>
+      </a>
+
+      <ul class="nav nav-pills">
+        <li class="nav-item"><a href="/" class="nav-link active">Home</a></li>
+        <li class="nav-item"><a href="/login" class="nav-link">Login</a></li>
+        <li class="nav-item"><a href="/signup" class="nav-link">Sign-up</a></li>
+      </ul>
+    </header>
+
+    <main class="my-auto px-3 text-center justify-content-center">
+    <h1 class="display-5 fw-bold">Your No Extra Hardware, Use Anywhere POS Solution</h1>
+    <div class="col-lg-6 mx-auto">
+      <p class="lead mb-4">Magical Merchant was designed to give small businesses a point of sale system they can use both in-house and at events, conventions, or anywhere else. </p>
+      <p class="lead mb-4">This page can be used for demo accounts and testing. To setup your own instance of Magical Merchant, see the <a href="https://github.com/anitanotto/magical-merchant" target="_blank">documentation</a>.</p>
+
+    <footer class="my-auto row justify-content-around">
+        <a href="/login" class="col-4 col-md-2 btn btn-lg btn-primary"> Login</a>
+        <a href="/signup" class="col-4 col-md-2 btn btn-lg btn-primary"> Sign-up</a>
+    </footer>
+    </main>
+
+</div>
 <%- include('partials/footer') -%>
