--- a/views/pos.ejs
+++ b/views/pos.ejs
@@ -189,15 +189,32 @@
                 </form>
                 </div>
                 <div class="collapse" id="cardCollapse" data-bs-parent=".modal-body">
-                <p>Test</p>
-                
+                <% if (stripeKey === true) { %>
+                <div class="row justify-content-center">
+                <p id="cardDisplay" class="text-center"></p>
+                <div id="qrDisplay"></div>
+                </div>
+                <button type="button" class="btn btn-secondary mx-auto d-block" id="getQrCode">Generate Payment Code</button>
 
-                <form action="/pos/payment/<%= order._id %>?_method=PUT" method="POST">
-                    <button type="submit" class="btn btn-success">Complete Order</button>
+                <form action="/pos/completeOrder/<%= order._id %>?_method=PUT" method="POST">
+                    <button type="submit" id="cardComplete" class="hidden mx-auto btn btn-success">Complete Order</button>
+                </form>
+                <% } else { %>
+
+                <p>Your Stripe account has not been connected to Magical Merchant.</p>
+                <p>Create a new restricted API key from your <a href="https://dashboard.stripe.com/apikeys" target="_blank">Stripe Dashboard</a> with <span class="fw-bold">Write</span> permissions for <span class="fw-bold">Products</span>, <span class="fw-bold">Prices</span>, and <span class="fw-bold">Payment Links</span> and copy it below to enable card payments in Magical Merchant via Payment Links.</p>
+                <form action="/pos/setStripeSettings?_method=PUT" method="POST">
+                
+                <div class="input-group flex-nowrap unpadSides">
+                <input type="text" name="stripePublicKey" class="form-control" placeholder="Stripe API Key">
+                <button type="submit" class="btn btn-primary">Submit</button>
+                </div>
+
                 </form>
 
+                <p class="mt-3">If you do not have a Stripe account you can register <a href="https://dashboard.stripe.com/register" target="_blank">here</a>.</p>
 
-
+                <% } %>
                 </div>
             </div>
 
