--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,7 +22,7 @@
     <h1 class="display-5 fw-bold">Your No Extra Hardware, Use Anywhere POS Solution</h1>
     <div class="col-lg-6 mx-auto">
       <p class="lead mb-4">Magical Merchant was designed to give small businesses a point of sale system they can use both in-house and at events, conventions, or anywhere else. </p>
-      <p class="lead mb-4">This page can be used for demo accounts and testing. To setup your own instance of Magical Merchant, see the <a href="https://github.com/anitanotto/magical-merchant" target="_blank">documentation</a>.</p>
+      <p class="lead mb-4">After signing up and linking your Stripe account you can even take payments via card without any extra hardware via Payment Link QR codes.</p>
 
     <footer class="my-auto row justify-content-around">
         <a href="/login" class="col-4 col-md-2 btn btn-lg btn-primary"> Login</a>
