--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -39,8 +39,9 @@
 
     <div class="row align-items-center g-lg-5 py-5">
       <div class="col-lg-7 text-center text-lg-start">
-        <h1 class="display-4 fw-bold lh-1 mb-3">Sign-up for a demo account</h1>
-        <p class="col-lg-10 fs-4">This instance is deployed for demo accounts and testing. If you would like to use Magical Merchant for your business, please follow the setup instructions in the <a href="https://github.com/anitanotto/magical-merchant" target="_blank">documentation</a>.</p>
+        <h2 class="display-4 fw-bold lh-1 mb-3">Sign-up for</h2>
+        <h1 class="display-4 fw-bold lh-1 mb-3">Magical Merchant</h1>
+        <p class="col-lg-10 fs-4">A Stripe API key is required to take payments via card.</p>
       </div>
       <div class="col-md-10 mx-auto col-lg-5">
         <form class="p-4 p-md-5 border rounded-3 bg-light" action="/signup" method="POST">
