--- a/views/pos.ejs
+++ b/views/pos.ejs
@@ -15,25 +15,109 @@
                 <h1 id="<%= order._id %>"><div class="fw-bold">Order #<%= order._id %></div></h1>
             </nav>
         </div>
-        <div class="col-6 g=0">
+        <div class="col-6">
             <nav class="navbar justify-content-end">
                 <a class="menu btn btn-primary" data-bs-toggle="offcanvas" href="#offcanvas" role="button">Menu</a>
-                <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvas">
-                    <div class="offcanvas-header">
-                        <h5 class="offcanvas-title" id="offcanvasLabel">Functions</h5>
+                <div class="offcanvas offcanvas-end pb-0" tabindex="-1" id="offcanvas">
+                    <div class="offcanvas-header pb-0">
+                        <h5 class="offcanvas-title ps-3" id="offcanvasLabel">Menu</h5>
                         <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas">
                     </div>
                     <div class="offcanvas-body">
-                        <div>Current Order</div>
-                        <div><a href="#" class="btn btn-primary my-1">Suspend Order</a></div>
-                        <div><a href="#" class="btn btn-primary my-1">Void Order</a></div>
-                        <div>Order Lookup</div>
-                        <div><a href="#" class="btn btn-primary my-1">Suspended Orders</a></div>
-                        <div><a href="#" class="btn btn-primary my-1">Completed Orders</a></div>
-                        <div>Account</div>
-                        <div><a href="#" class="btn btn-primary my-1">Add/Remove Items</a></div>
-                        <div><a href="#" class="btn btn-primary my-1">Account Options</a></div>
-                        <div><a href="/logout" class="btn btn-primary my-1">Logout</a></div>
+
+
+  <div class="flex-shrink-0 bg-white" style="width: 280px;">
+    <ul class="list-unstyled ps-0">
+
+      <li class="my-3 pt-3 border-top">
+        <button class="btn btn-toggle d-inline-flex align-items-center rounded border-0 collapsed" data-bs-toggle="collapse" data-bs-target="#dashboard-collapse" aria-expanded="false">
+          Items
+        </button>
+        <div class="collapse" id="dashboard-collapse">
+          <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
+
+            <li>
+                <form action="/items/addItem" method="POST">
+                <span>Add a New Item</span>
+               
+                <input type="text" name="itemName" class="form-control" placeholder="Item Name">
+                <div class="input-group flex-nowrap unpadSides">
+                <input type="text" name="itemPrice" class="form-control" placeholder="Item Price">
+                <input type="text" name="itemTax" class="form-control" placeholder="Item Tax">
+                </div>
+                
+                <div class="input-group flex-nowrap unpadSides">
+                <input type="text" name="itemCode" class="form-control" placeholder="Item Code">
+                <button type="submit" class="btn btn-primary">Submit</button>
+                </div>
+                </form>
+            </li>
+
+
+
+
+
+
+          </ul>
+        </div>
+      </li>
+      </li>
+      
+
+
+
+
+
+
+      <li class="mb-1">
+        <button class="btn btn-toggle d-inline-flex align-items-center rounded border-0 collapsed" data-bs-toggle="collapse" data-bs-target="#orders-collapse" aria-expanded="false">
+          Account
+        </button>
+        <div class="collapse" id="orders-collapse">
+          <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
+
+            <li>
+                <form action="/pos/setStripeSettings?_method=PUT" method="POST">
+                <span>Update API Key</span>
+                
+                <div class="input-group flex-nowrap unpadSides">
+                <input type="text" name="stripePublicKey" class="form-control" placeholder="Stripe API Key">
+                <button type="submit" class="btn btn-primary">Submit</button>
+                </div>
+                </form>
+            </li>
+
+            <li><a href="/logout" class="link-dark d-inline-flex text-decoration-none rounded">Logout</a></li>
+          </ul>
+        </div>
+      </li>
+
+
+
+
+
+
+    </ul>
+  </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
                     </div>
                 </div>
             </nav>
@@ -126,7 +210,7 @@
           <div id="autocomplete"></div>
           <input type="hidden" id="searchInput" name="searchInput">
           <div class="form-floating flex-grow-1">
-            <select name="searchCategory" class="form-select square">
+            <select id="searchCategory" name="searchCategory" class="form-select square">
               <option value="code">Item Code</option>
               <option value="name">Item Name</option>
             </select>
@@ -212,7 +296,7 @@
 
                 </form>
 
-                <p class="mt-3">If you do not have a Stripe account you can register <a href="https://dashboard.stripe.com/register" target="_blank">here</a>.</p>
+                <p class="mt-3">If you do not have a Stripe account, you can register <a href="https://dashboard.stripe.com/register" target="_blank">here</a>.</p>
 
                 <% } %>
                 </div>
